fix: proposal feedback (#582)
* fix(proposal-detail): switching network crashed app

* feat(markdown): headers should not have underline

* fix(proposal-table): incorrect widths

* fix(proposal-table): use mock data and fix token symbol

* fix(proposal): vote buttons should be equal size

* fix(vote): footer text too small

* fix(vote): font color needs to be grey

* fix(vote): center footer text

* feat(markdown-viewer): handle links properly
Correct styling
Link to _blank

* fix(vote): round bar percentage labels

* fix(vote): match history to Snapshot
Remove amount label, append token symbol to power

* feat(proposal): hide vote bar when no votes

* feat(vote): more accurate "vote in progress" text in footer

* feat(proposals): right align loading spinners

* feat(proposals): filter older proposals for prototype

* feat(proposals): adjust attributes to match Snapshot

* fix(proposals): more graceful handling of undefined USD amount

* feat(daos): hide non-prototype DAOs

* fix(generic-table): hide toggle buttons when no search bar

* fix(proposals): incorrect top margin

--- a/src/containers/DAO/pages/DAOPage/Proposals/ProposalDetail/Vote/Vote.module.scss
+++ b/src/containers/DAO/pages/DAOPage/Proposals/ProposalDetail/Vote/Vote.module.scss
@@ -9,6 +9,13 @@
 
 	padding: 42px 16px 16px 16px;
 	background: linear-gradient(180deg, rgba(10, 10, 10, 0) 0%, #0A0A0A 28.34%);
+
+	.FooterText {
+		font-size: 18px;
+		font-weight: 700;
+		color: var(--color-grey-lighter-2);
+		text-align: center;
+	}
 }
 
 .Choices {
@@ -20,7 +27,8 @@
 	gap: 32px;
 
 	button {
-		padding: 8px 48.5px;
+		width: 240px;
+		padding: 8px 44px;
 		font-size: 18px;
 		font-weight: 700;
 		background: none;
